<resources>
    <string name="app_name">TestScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin_into_your">SignIn into your</string>
    <string name="account">Account</string>
    <string name="signin">SignIn</string>
    <string name="i_agree_with">i agree with</string>
    <string name="terms_and_condition">terms and condition</string>
    <string name="login_with">Login With</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_out">Sign Out</string>

</resources>